<resources>
    <string name="app_name">Spot Safely</string>
    <string name="blue_buttom">blue button</string>
    <string name="hold_down_button">SAFE</string>
    <string name="button">-</string>
    <string name="driver_or_spotter">Are you a driver or a spotter?</string>
    <string name="stop">STOP</string>
    <string name="start">DRIVER</string>
    <string name="join">SPOTTER</string>
    <string name="wifi_off">WiFi it off, please turn it on</string>
    <string name="stop_driving">STOP DRIVING</string>
    <string name="start_driving">START DRIVING</string>
    <string name="spotters_are_joining">Spotters can join</string>
    <string name="network_is_busy_re_start_wifi">Network is busy, re-start WiFi</string>
    <string name="stop_alarm">STOP ALARM</string>
    <string name="spotter">SPOTTER</string>
    <string name="disconnect">DISCONNECT</string>
    <string name="not_connected">Not Connected</string>
    <string name="cancel">CANCEL</string>
    <string name="select_the_driver_s_phone">Select the driver\'s phone</string>
    <string name="driver">DRIVER</string>
    <string name="leave">LEAVE</string>
    <string name="hold_when_safe">HOLD\nWHEN\nSAFE</string>
    <string name="connecting_to">"Connecting to: "</string>
    <string name="warning_volume_is_less_than_50">WARNING: Volume is less than 50%</string>
    <string name="no_others_found">No others found</string>
    <string name="connected_to">"Connected to: "</string>
    <string name="background_image_of_fire_truck">background image of fire truck</string>
</resources>